fixed code according to comments of mentor Elena Bruyako